--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "chess.js": "^1.4.0",
     "react": "^19.1.0",
+    "react-chessboard": "^5.6.1",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
