--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "chess.js": "^1.4.0",
     "react": "^19.1.0",
     "react-chessboard": "^5.6.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
