--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chessboard": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
