--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^19.1.0",
     "react-chessboard": "^5.6.1",
     "react-dom": "^19.1.0",
+    "react-draggable": "^4.5.0",
     "react-icons": "^5.5.0",
+    "react-resizable": "^3.0.5",
+    "resizable-pip": "^0.1.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
